--- a/css/customIndex.css
+++ b/css/customIndex.css
@@ -85,7 +85,7 @@ nav{
 
 nav ul:hover li{
   list-style-type: none;
-  
+
 
 }
 
@@ -131,7 +131,7 @@ nav ul li:hover a{
 
 nav ul li:hover > ul >li >a{
   background: rgb(218, 218, 218);
-  
+
 }
 
 nav ul li >ul >li >a:hover{
@@ -187,7 +187,7 @@ float:right;*/
 
 #menubar:checked ~ nav{
    display: block;
-   
+
 }
   .has-children ul li a {
       padding:.25rem;
@@ -243,7 +243,7 @@ nav ul {
       position:relative;
       flex: 1 0 auto;
       text-align: center;
-      
+
   }
 #About-Menu{
   flex:1 0 auto;
@@ -257,7 +257,7 @@ nav ul {
   .has-children ul .has-children ul{
       left: 98%;
       top: 0;
-      
+
   }
 
   nav ul li:hover ul, .has-children ul .has-children:hover ul{
@@ -265,7 +265,7 @@ nav ul {
    flex-direction: column;
    padding:0;
    margin:0;
-   
+
   }
   nav ul li ul.closed{
     display:none;
@@ -303,12 +303,12 @@ label{
 /*CSS for Carousel*/
 .carousel-inner  {
   z-index: -1;
-  
+
 }
 @media only screen and (max-width:768px){
   .carousel{
     z-index:-1;
-  } 
+  }
 }
 .coreValues{
 color: white;
@@ -331,7 +331,7 @@ font-family: "Montserrat", sans-serif;
 }
 .vision-Mission h2{
   margin-top:30px;
-  
+
 }
 
 #valuesInto{
@@ -345,29 +345,29 @@ font-family: "Montserrat", sans-serif;
 	-ms-animation: 10s linear 0s normal none infinite animate;
 	-o-animation: 10s linear 0s normal none infinite animate;
 	animation: 10s linear 0s normal none infinite animate;
- 
+
 }
- 
+
 @-webkit-keyframes animate {
 	from {background-position:0 0;}
 	to {background-position: 500px 0;}
 }
- 
+
 @-moz-keyframes animate {
 	from {background-position:0 0;}
 	to {background-position: 500px 0;}
 }
- 
+
 @-ms-keyframes animate {
 	from {background-position:0 0;}
 	to {background-position: 500px 0;}
 }
- 
+
 @-o-keyframes animate {
 	from {background-position:0 0;}
 	to {background-position: 500px 0;}
 }
- 
+
 @keyframes animate {
 	from {background-position:0 0;}
 	to {background-position: 500px 0;}
@@ -382,9 +382,9 @@ font-family: "Montserrat", sans-serif;
   min-height: 400px;
   color:white;
   font-family: "Montserrat", sans-serif;
- 
- background-color:rgba(221,221,221,0.3); 
- margin-right:0; 
+
+ background-color:rgba(221,221,221,0.3);
+ margin-right:0;
  padding-right:0;
  /*border:1px solid white;*/
 }
@@ -394,7 +394,7 @@ font-family: "Montserrat", sans-serif;
 }
 #mission h2{
   margin-top:130px;
-  
+
 }
 ::placeholder{
   color:white;
@@ -405,15 +405,15 @@ font-family: "Montserrat", sans-serif;
   color:white !important;
 }
 
-:-moz-placeholder { 
+:-moz-placeholder {
  /* text-align: center;*/
   color:white !important;
 }
 
-::-moz-placeholder { 
+::-moz-placeholder {
   /*text-align: center;*/
   color:white !important;
-  
+
 }
 
 :-ms-input-placeholder {
@@ -425,7 +425,7 @@ font-family: "Montserrat", sans-serif;
   background: black;
   color: aliceblue;
   min-height: 450px;
-  
+
 
 }
 
@@ -501,9 +501,9 @@ display:none;
 @media only screen and (max-width:786px){
   textarea{
     margin-left: 0px;
-    
+
     }
- 
+
 }
 #logo{
   position:absolute;
@@ -512,7 +512,7 @@ display:none;
   background:none;
   z-index:100;
   margin-left:20px;
-  
+
 }
 
 #logo > img{
@@ -524,11 +524,12 @@ display:none;
     position: absolute;
     top:0;
     margin: 0;
-    
+
   }
 
   #logo>img{
     height:45px;
+    width:auto;
   }
 
 }
@@ -566,13 +567,13 @@ margin-left: 40px;
 
 }
 @media only screen and (max-width:786px){
-  
+
   .form-align{
     width:100%;
     margin-left: 10px;
-    
+
     }
-  
+
 }
 
 .divider{
@@ -610,7 +611,7 @@ margin-left: 40px;
 }
 
 .About-Desc{
-  font-size:18px; 
+  font-size:18px;
   text-align:justify;
 }
 
@@ -623,7 +624,7 @@ color:white;
 }
 
 #form-Name{
-  margin-bottom:0; 
+  margin-bottom:0;
   margin-top:50px;
 }
 
@@ -632,34 +633,34 @@ color:white;
   border-top:none;
   border-left:none;
   border-right:none;
-  
+
 }
 
 #form-email{
-  margin-bottom:0; 
+  margin-bottom:0;
   margin-top:20px;
 }
 
 #form-subject{
-  margin-bottom:15px; 
+  margin-bottom:15px;
   margin-top:20px;
 }
 
 #form-textarea{
-  margin-bottom:15px; 
+  margin-bottom:15px;
   margin-top:20px;
-  
+
 }
 textarea{
   background: none !important;
   border-right:none !important;
   border-left:none !important;
   border-top:none !important;
-  
+
 }
 .footer-content img{
   padding:5px;
-  
+
 }
 
 @media only screen and (max-width:768px){
@@ -669,12 +670,23 @@ textarea{
 }
 
 .services-Desc p{
-  padding:50px;
-  font-size:16px;
-  color:white;
-  border:1px solid rgb(0,11,64);
-  background-color: rgba(0, 11, 64, 0.5);
+  padding:20px;
+  font-size:20px;
+  color:black;
+  text-align: justify;
+  justify-content: space-between;
+  /* border:1px solid rgb(0,11,64);
+  background-color: rgba(0, 11, 64, 0.5); */
 
 }
- 
+
+#Staffing-underline{
+  margin-left:47%;
+}
+@media only screen and (max-width:768px){
+  #Staffing-underline{
+    margin-left:40%;
+  }
+}
+
 /*CSS For Mobile Version*/
